--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "mssql": "^5.1.0",
     "nodemon": "^1.19.1"
   }
