--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3",
     "react-table": "^6.10.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
